--- a/index.html
+++ b/index.html
@@ -40,6 +40,56 @@
         <h3>Scenic View 5</h3>
         <p>Stunning desert dunes at sunset.</p>
       </div>
+      <div class="tinder--card">
+        <img src="https://loremflickr.com/600/300/city">
+        <h3>Scenic View 6</h3>
+        <p>A vibrant cityscape with towering buildings.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://loremflickr.com/600/300/animals">
+        <h3>Scenic View 7</h3>
+        <p>Wild animals roaming in their natural habitat.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://loremflickr.com/600/300/flowers">
+        <h3>Scenic View 8</h3>
+        <p>Colorful flowers blooming in a meadow.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://loremflickr.com/600/300/sky">
+        <h3>Scenic View 9</h3>
+        <p>A breathtaking sky filled with stars.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://loremflickr.com/600/300/beach">
+        <h3>Scenic View 10</h3>
+        <p>Golden sands and palm trees on a tropical beach.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://loremflickr.com/600/300/lake">
+        <h3>Scenic View 11</h3>
+        <p>Calm waters of a serene lake reflecting the mountains.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://loremflickr.com/600/300/river">
+        <h3>Scenic View 12</h3>
+        <p>A winding river flowing through lush valleys.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://loremflickr.com/600/300/waterfall">
+        <h3>Scenic View 13</h3>
+        <p>Majestic waterfall cascading down rocky cliffs.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://loremflickr.com/600/300/canyon">
+        <h3>Scenic View 14</h3>
+        <p>Deep canyons carved by ancient rivers.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://loremflickr.com/600/300/valley">
+        <h3>Scenic View 15</h3>
+        <p>Peaceful valley surrounded by rolling hills.</p>
+      </div>
     </div>
 
     <div class="tinder--buttons">
