--- a/index.html
+++ b/index.html
@@ -16,79 +16,269 @@
 
     <div class="tinder--cards">
       <div class="tinder--card">
-        <img src="https://loremflickr.com/600/300/nature">
-        <h3>Scenic View 1</h3>
-        <p>A beautiful landscape showcasing nature's splendor.</p>
+        <img src="https://via.placeholder.com/600x300/FF5733/FFFFFF?text=GPT-3">
+        <h3>GPT-3</h3>
+        <p>Мощная языковая модель от OpenAI для генерации текста и понимания естественного языка.</p>
       </div>
       <div class="tinder--card">
-        <img src="https://loremflickr.com/600/300/mountains">
-        <h3>Scenic View 2</h3>
-        <p>Majestic mountains under a clear sky.</p>
+        <img src="https://via.placeholder.com/600x300/33FF57/FFFFFF?text=GPT-4">
+        <h3>GPT-4</h3>
+        <p>Улучшенная версия GPT-3 с лучшим пониманием контекста и генерацией кода.</p>
       </div>
       <div class="tinder--card">
-        <img src="https://loremflickr.com/600/300/ocean">
-        <h3>Scenic View 3</h3>
-        <p>Serene ocean waves crashing on the shore.</p>
+        <img src="https://via.placeholder.com/600x300/3357FF/FFFFFF?text=BERT">
+        <h3>BERT</h3>
+        <p>Модель для обработки естественного языка, фокусирующаяся на понимании контекста.</p>
       </div>
       <div class="tinder--card">
-        <img src="https://loremflickr.com/600/300/forest">
-        <h3>Scenic View 4</h3>
-        <p>Lush green forests in autumn colors.</p>
+        <img src="https://via.placeholder.com/600x300/FF33A1/FFFFFF?text=T5">
+        <h3>T5</h3>
+        <p>Text-to-Text Transfer Transformer для различных задач NLP.</p>
       </div>
       <div class="tinder--card">
-        <img src="https://loremflickr.com/600/300/desert">
-        <h3>Scenic View 5</h3>
-        <p>Stunning desert dunes at sunset.</p>
+        <img src="https://via.placeholder.com/600x300/33FFA1/FFFFFF?text=RoBERTa">
+        <h3>RoBERTa</h3>
+        <p>Улучшенная версия BERT с оптимизированным обучением.</p>
       </div>
       <div class="tinder--card">
-        <img src="https://loremflickr.com/600/300/city">
-        <h3>Scenic View 6</h3>
-        <p>A vibrant cityscape with towering buildings.</p>
+        <img src="https://via.placeholder.com/600x300/A133FF/FFFFFF?text=XLNet">
+        <h3>XLNet</h3>
+        <p>Модель, преодолевающая ограничения BERT с авторегрессивным подходом.</p>
       </div>
       <div class="tinder--card">
-        <img src="https://loremflickr.com/600/300/animals">
-        <h3>Scenic View 7</h3>
-        <p>Wild animals roaming in their natural habitat.</p>
+        <img src="https://via.placeholder.com/600x300/FF8C33/FFFFFF?text=ALBERT">
+        <h3>ALBERT</h3>
+        <p>Легковесная версия BERT с меньшим количеством параметров.</p>
       </div>
       <div class="tinder--card">
-        <img src="https://loremflickr.com/600/300/flowers">
-        <h3>Scenic View 8</h3>
-        <p>Colorful flowers blooming in a meadow.</p>
+        <img src="https://via.placeholder.com/600x300/33FF8C/FFFFFF?text=DistilBERT">
+        <h3>DistilBERT</h3>
+        <p>Дистиллированная версия BERT для быстрого вывода.</p>
       </div>
       <div class="tinder--card">
-        <img src="https://loremflickr.com/600/300/sky">
-        <h3>Scenic View 9</h3>
-        <p>A breathtaking sky filled with stars.</p>
+        <img src="https://via.placeholder.com/600x300/8C33FF/FFFFFF?text=Electra">
+        <h3>Electra</h3>
+        <p>Эффективная модель для предварительного обучения с заменой токенов.</p>
       </div>
       <div class="tinder--card">
-        <img src="https://loremflickr.com/600/300/beach">
-        <h3>Scenic View 10</h3>
-        <p>Golden sands and palm trees on a tropical beach.</p>
+        <img src="https://via.placeholder.com/600x300/FF338C/FFFFFF?text=LaMDA">
+        <h3>LaMDA</h3>
+        <p>Модель от Google для диалогового ИИ с пониманием контекста.</p>
       </div>
       <div class="tinder--card">
-        <img src="https://loremflickr.com/600/300/lake">
-        <h3>Scenic View 11</h3>
-        <p>Calm waters of a serene lake reflecting the mountains.</p>
+        <img src="https://via.placeholder.com/600x300/338CFF/FFFFFF?text=PaLM">
+        <h3>PaLM</h3>
+        <p>Pathways Language Model от Google для масштабируемого обучения.</p>
       </div>
       <div class="tinder--card">
-        <img src="https://loremflickr.com/600/300/river">
-        <h3>Scenic View 12</h3>
-        <p>A winding river flowing through lush valleys.</p>
+        <img src="https://via.placeholder.com/600x300/8CFF33/FFFFFF?text=Gemini">
+        <h3>Gemini</h3>
+        <p>Мультимодальная модель от Google для текста, изображений и кода.</p>
       </div>
       <div class="tinder--card">
-        <img src="https://loremflickr.com/600/300/waterfall">
-        <h3>Scenic View 13</h3>
-        <p>Majestic waterfall cascading down rocky cliffs.</p>
+        <img src="https://via.placeholder.com/600x300/FF5733/FFFFFF?text=Llama">
+        <h3>Llama</h3>
+        <p>Семейство открытых моделей от Meta для генерации текста.</p>
       </div>
       <div class="tinder--card">
-        <img src="https://loremflickr.com/600/300/canyon">
-        <h3>Scenic View 14</h3>
-        <p>Deep canyons carved by ancient rivers.</p>
+        <img src="https://via.placeholder.com/600x300/33FF57/FFFFFF?text=Llama+2">
+        <h3>Llama 2</h3>
+        <p>Улучшенная версия Llama с лучшей безопасностью и производительностью.</p>
       </div>
       <div class="tinder--card">
-        <img src="https://loremflickr.com/600/300/valley">
-        <h3>Scenic View 15</h3>
-        <p>Peaceful valley surrounded by rolling hills.</p>
+        <img src="https://via.placeholder.com/600x300/3357FF/FFFFFF?text=Mistral">
+        <h3>Mistral</h3>
+        <p>Компактная и эффективная модель от Mistral AI.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/FF33A1/FFFFFF?text=Claude">
+        <h3>Claude</h3>
+        <p>Модель от Anthropic для безопасного и полезного ИИ.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/33FFA1/FFFFFF?text=Claude+2">
+        <h3>Claude 2</h3>
+        <p>Обновленная версия Claude с улучшенными возможностями.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/A133FF/FFFFFF?text=Grok">
+        <h3>Grok</h3>
+        <p>Модель от xAI, вдохновленная ИИ из научной фантастики.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/FF8C33/FFFFFF?text=DALL-E">
+        <h3>DALL-E</h3>
+        <p>Модель от OpenAI для генерации изображений из текста.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/33FF8C/FFFFFF?text=DALL-E+2">
+        <h3>DALL-E 2</h3>
+        <p>Улучшенная версия DALL-E с лучшим качеством изображений.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/8C33FF/FFFFFF?text=Stable+Diffusion">
+        <h3>Stable Diffusion</h3>
+        <p>Открытая модель для генерации изображений с диффузией.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/FF338C/FFFFFF?text=Midjourney">
+        <h3>Midjourney</h3>
+        <p>ИИ для создания художественных изображений из текстовых описаний.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/338CFF/FFFFFF?text=Imagen">
+        <h3>Imagen</h3>
+        <p>Модель от Google для высококачественной генерации изображений.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/8CFF33/FFFFFF?text=ResNet">
+        <h3>ResNet</h3>
+        <p>Семейство глубоких нейронных сетей для компьютерного зрения.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/FF5733/FFFFFF?text=VGG">
+        <h3>VGG</h3>
+        <p>Модель для классификации изображений с глубокими свёрточными слоями.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/33FF57/FFFFFF?text=Inception">
+        <h3>Inception</h3>
+        <p>Архитектура для эффективного извлечения признаков из изображений.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/3357FF/FFFFFF?text=YOLO">
+        <h3>YOLO</h3>
+        <p>You Only Look Once - модель для обнаружения объектов в реальном времени.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/FF33A1/FFFFFF?text=SSD">
+        <h3>SSD</h3>
+        <p>Single Shot MultiBox Detector для быстрого обнаружения объектов.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/33FFA1/FFFFFF?text=Faster+R-CNN">
+        <h3>Faster R-CNN</h3>
+        <p>Модель для точного обнаружения и сегментации объектов.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/A133FF/FFFFFF?text=Mask+R-CNN">
+        <h3>Mask R-CNN</h3>
+        <p>Расширение Faster R-CNN для сегментации экземпляров.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/FF8C33/FFFFFF?text=UNet">
+        <h3>UNet</h3>
+        <p>Архитектура для сегментации изображений с энкодером-декодером.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/33FF8C/FFFFFF?text=Transformer">
+        <h3>Transformer</h3>
+        <p>Архитектура внимания для обработки последовательностей.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/8C33FF/FFFFFF?text=ViT">
+        <h3>ViT</h3>
+        <p>Vision Transformer для обработки изображений как последовательностей.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/FF338C/FFFFFF?text=Swin+Transformer">
+        <h3>Swin Transformer</h3>
+        <p>Иерархический трансформер для компьютерного зрения.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/338CFF/FFFFFF?text=ConvNeXt">
+        <h3>ConvNeXt</h3>
+        <p>Современная свёрточная архитектура, вдохновленная трансформерами.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/8CFF33/FFFFFF?text=EfficientNet">
+        <h3>EfficientNet</h3>
+        <p>Масштабируемая модель для мобильных устройств.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/FF5733/FFFFFF?text=MobileNet">
+        <h3>MobileNet</h3>
+        <p>Легковесная модель для мобильного компьютерного зрения.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/33FF57/FFFFFF?text=SqueezeNet">
+        <h3>SqueezeNet</h3>
+        <p>Компактная архитектура с низким количеством параметров.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/3357FF/FFFFFF?text=AlexNet">
+        <h3>AlexNet</h3>
+        <p>Пионерская свёрточная сеть, победившая в ImageNet 2012.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/FF33A1/FFFFFF?text=LeNet">
+        <h3>LeNet</h3>
+        <p>Ранняя свёрточная сеть для распознавания рукописных цифр.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/33FFA1/FFFFFF?text=GAN">
+        <h3>GAN</h3>
+        <p>Generative Adversarial Network для генерации реалистичных данных.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/A133FF/FFFFFF?text=DCGAN">
+        <h3>DCGAN</h3>
+        <p>Deep Convolutional GAN для генерации изображений.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/FF8C33/FFFFFF?text=StyleGAN">
+        <h3>StyleGAN</h3>
+        <p>Модель для генерации высококачественных лиц и изображений.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/33FF8C/FFFFFF?text=VAE">
+        <h3>VAE</h3>
+        <p>Variational Autoencoder для генеративного моделирования.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/8C33FF/FFFFFF?text=Diffusion+Models">
+        <h3>Diffusion Models</h3>
+        <p>Модели на основе диффузии для генерации изображений и аудио.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/FF338C/FFFFFF?text=WaveNet">
+        <h3>WaveNet</h3>
+        <p>Модель от Google для генерации реалистичной речи.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/338CFF/FFFFFF?text=Tacotron">
+        <h3>Tacotron</h3>
+        <p>Модель для синтеза речи из текста.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/8CFF33/FFFFFF?text=BERT">
+        <h3>BERT</h3>
+        <p>Модель для обработки естественного языка, фокусирующаяся на понимании контекста.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/FF5733/FFFFFF?text=ERNIE">
+        <h3>ERNIE</h3>
+        <p>Enhanced Representation through kNowledge IntEgration от Baidu.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/33FF57/FFFFFF?text=WuDao">
+        <h3>WuDao</h3>
+        <p>Китайская модель для генерации текста и понимания языка.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/3357FF/FFFFFF?text=Pangu">
+        <h3>Pangu</h3>
+        <p>Модель от Huawei для обработки больших данных.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/FF33A1/FFFFFF?text=Yuan">
+        <h3>Yuan</h3>
+        <p>Открытая модель от Tsinghua University для генерации текста.</p>
+      </div>
+      <div class="tinder--card">
+        <img src="https://via.placeholder.com/600x300/33FFA1/FFFFFF?text=GLM">
+        <h3>GLM</h3>
+        <p>General Language Model от Tsinghua для различных задач.</p>
       </div>
     </div>
 
