--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <div class="tinder">
     <div class="tinder--status">
-      <i class="fa fa-remove"></i>
-      <i class="fa fa-heart"></i>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Sam_Altman_-_Pop_Tech_2015_%28cropped%29.jpg" alt="Dislike" class="status-icon">
+      <img src="https://www.biography.com/.image/t_share/MTc5OTk2ODUyMTMxNzM0ODcy/gettyimages-1229892983-square.jpg" alt="Like" class="status-icon">
     </div>
 
     <div class="tinder--cards">
@@ -283,8 +283,8 @@
     </div>
 
     <div class="tinder--buttons">
-      <button id="nope"><i class="fa fa-remove"></i></button>
-      <button id="love"><i class="fa fa-heart"></i></button>
+      <button id="nope"><img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Sam_Altman_-_Pop_Tech_2015_%28cropped%29.jpg" alt="Dislike" class="button-icon"></button>
+      <button id="love"><img src="https://www.biography.com/.image/t_share/MTc5OTk2ODUyMTMxNzM0ODcy/gettyimages-1229892983-square.jpg" alt="Like" class="button-icon"></button>
     </div>
   </div>
 
