--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
     </div>
 
     <div class="tinder--buttons">
-      <button id="nope"><img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Sam_Altman_-_Pop_Tech_2015_%28cropped%29.jpg" alt="Dislike" class="button-icon"></button>
-      <button id="love"><img src="https://www.biography.com/.image/t_share/MTc5OTk2ODUyMTMxNzM0ODcy/gettyimages-1229892983-square.jpg" alt="Like" class="button-icon"></button>
+      <button type="button" id="nope"><img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Sam_Altman_-_Pop_Tech_2015_%28cropped%29.jpg" alt="Dislike" class="button-icon"></button>
+      <button type="button" id="love"><img src="https://www.biography.com/.image/t_share/MTc5OTk2ODUyMTMxNzM0ODcy/gettyimages-1229892983-square.jpg" alt="Like" class="button-icon"></button>
     </div>
   </div>
 
