--- a/index.html
+++ b/index.html
@@ -290,5 +290,9 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="script.js"></script>
+  <script
+    type="module"
+    src="https://yastatic.net/s3/distribution/stardust/neuroexpert-widget/production/neuroexpert-widget.js"
+  ></script>
 </body>
 </html>
